[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]
[ext_resource path="res://assets/player_r.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.5, 39.5 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="floor" type="Area2D" parent="."]

[node name="floor_chk" type="CollisionPolygon2D" parent="floor"]
position = Vector2( 2, -2 )
polygon = PoolVector2Array( 6, 72, 32, 51, 46, 1, 49, 71, 50, 80, 47, 85, 6, 87, 2, 79 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 24, 46.5 )
current = true
limit_left = -51

[node name="player_lives" type="Node2D" parent="Camera2D"]
position = Vector2( -24, -46.5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D/player_lives"]
margin_left = 21.0
margin_top = -40.0
margin_right = 61.0
text = "3"

[node name="RichTextLabel" type="RichTextLabel" parent="Camera2D"]
margin_left = -76.0
margin_top = -297.5
margin_right = 60.0
margin_bottom = -257.5
rect_min_size = Vector2( 3, 0 )
rect_scale = Vector2( 3, 3 )
text = "Score: "

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 29.5, 39 )
shape = SubResource( 1 )

[node name="Player_L" type="Sprite" parent="."]
visible = false
position = Vector2( 32, 37 )
scale = Vector2( 0.199346, 0.147059 )
texture = ExtResource( 2 )

[node name="PlayerR" type="Sprite" parent="."]
position = Vector2( 29, 36 )
scale = Vector2( 0.210784, 0.147059 )
texture = ExtResource( 3 )

[node name="score_track" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="floor" to="." method="_on_floor_body_entered"]
[connection signal="body_exited" from="floor" to="." method="_on_floor_body_exited"]
[connection signal="timeout" from="score_track" to="." method="_on_score_track_timeout"]
